<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.calculatorsScreens.one">

    <EditText
        android:id="@+id/editTextNumberSigned6"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"

        android:ems="10"
        android:gravity="center"
        android:hint="@string/r2"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumberSigned4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberSigned5"
        app:layout_constraintTop_toTopOf="@+id/editTextNumberSigned4" />

    <EditText
        android:id="@+id/editTextNumberSigned3"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/r1"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberSigned2"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextNumberSigned4"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/c"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberSigned5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextNumberSigned5"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/d"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumberSigned4"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberSigned6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberSigned4"
        app:layout_constraintTop_toTopOf="@+id/editTextNumberSigned4" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/a"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberSigned4"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberSigned2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextNumberSigned2"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/b"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberSigned3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:background="@drawable/button_background"
        android:text="@string/evaluate"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="32sp"
        android:layout_margin="@dimen/_14sdp"
        android:gravity="center"
        android:text="@string/we_deal_with_equations_in_this_form_n_ax_by_r1_n_cx_dy_r2_n"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_38sdp"
        android:autoSizeTextType="uniform"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned4" />
</androidx.constraintlayout.widget.ConstraintLayout>