<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.calculatorsScreens.one">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="@dimen/_54sdp"
        android:ems="10"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/enter_the_number_here_please"
        android:inputType="numberSigned"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/button_background"
        android:text="@string/d_to_b"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_171sdp"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="32sp"
        android:text="@string/decimal_number_to_binary_or_vice_versa"
        android:textSize="@dimen/_34sdp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/button_background"
        android:text="@string/b_to_d"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>